@@ -6880,6 +6880,14 @@ operator|.
 name|getHiveLockMgr
 argument_list|()
 decl_stmt|;
+name|boolean
+name|isExt
+init|=
+name|showLocks
+operator|.
+name|isExt
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|lockMgr
@@ -7141,6 +7149,34 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|isExt
+condition|)
+block|{
+name|outStream
+operator|.
+name|write
+argument_list|(
+name|terminator
+argument_list|)
+expr_stmt|;
+name|outStream
+operator|.
+name|writeBytes
+argument_list|(
+literal|"QUERYID_LOCK:"
+operator|+
+name|lock
+operator|.
+name|getHiveLockObject
+argument_list|()
+operator|.
+name|getData
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|outStream
 operator|.
 name|write
@@ -7352,6 +7388,11 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|tbl
+argument_list|,
+name|lockTbl
+operator|.
+name|getQueryId
+argument_list|()
 argument_list|)
 argument_list|,
 name|mode
@@ -7422,6 +7463,11 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|par
+argument_list|,
+name|lockTbl
+operator|.
+name|getQueryId
+argument_list|()
 argument_list|)
 argument_list|,
 name|mode
@@ -7513,6 +7559,8 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|tbl
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
@@ -7561,6 +7609,8 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|par
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
