@@ -70,6 +70,11 @@ specifier|private
 name|Partition
 name|p
 decl_stmt|;
+comment|/* user supplied data for that object */
+specifier|private
+name|String
+name|data
+decl_stmt|;
 specifier|public
 name|HiveLockObject
 parameter_list|()
@@ -86,12 +91,21 @@ name|p
 operator|=
 literal|null
 expr_stmt|;
+name|this
+operator|.
+name|data
+operator|=
+literal|null
+expr_stmt|;
 block|}
 specifier|public
 name|HiveLockObject
 parameter_list|(
 name|Table
 name|t
+parameter_list|,
+name|String
+name|data
 parameter_list|)
 block|{
 name|this
@@ -105,6 +119,12 @@ operator|.
 name|p
 operator|=
 literal|null
+expr_stmt|;
+name|this
+operator|.
+name|data
+operator|=
+name|data
 expr_stmt|;
 block|}
 specifier|public
@@ -112,6 +132,9 @@ name|HiveLockObject
 parameter_list|(
 name|Partition
 name|p
+parameter_list|,
+name|String
+name|data
 parameter_list|)
 block|{
 name|this
@@ -125,6 +148,12 @@ operator|.
 name|p
 operator|=
 name|p
+expr_stmt|;
+name|this
+operator|.
+name|data
+operator|=
+name|data
 expr_stmt|;
 block|}
 specifier|public
@@ -203,6 +232,30 @@ name|getCompleteName
 argument_list|()
 return|;
 block|}
+block|}
+specifier|public
+name|String
+name|getData
+parameter_list|()
+block|{
+return|return
+name|data
+return|;
+block|}
+specifier|public
+name|void
+name|setData
+parameter_list|(
+name|String
+name|data
+parameter_list|)
+block|{
+name|this
+operator|.
+name|data
+operator|=
+name|data
+expr_stmt|;
 block|}
 block|}
 end_class
