@@ -834,11 +834,13 @@ name|create
 argument_list|(
 name|name
 argument_list|,
-operator|new
-name|byte
-index|[
-literal|0
-index|]
+name|key
+operator|.
+name|getData
+argument_list|()
+operator|.
+name|getBytes
+argument_list|()
 argument_list|,
 name|Ids
 operator|.
@@ -860,11 +862,13 @@ name|create
 argument_list|(
 name|name
 argument_list|,
-operator|new
-name|byte
-index|[
-literal|0
-index|]
+name|key
+operator|.
+name|getData
+argument_list|()
+operator|.
+name|getBytes
+argument_list|()
 argument_list|,
 name|Ids
 operator|.
@@ -1469,6 +1473,11 @@ range|:
 name|children
 control|)
 block|{
+name|String
+name|data
+init|=
+literal|"NULL"
+decl_stmt|;
 name|child
 operator|=
 literal|"/"
@@ -1479,6 +1488,49 @@ literal|"/"
 operator|+
 name|child
 expr_stmt|;
+try|try
+block|{
+name|data
+operator|=
+operator|new
+name|String
+argument_list|(
+name|zkpClient
+operator|.
+name|getData
+argument_list|(
+name|child
+argument_list|,
+operator|new
+name|DummyWatcher
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Error in getting data for "
+operator|+
+name|child
+operator|+
+literal|" "
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+comment|// ignore error
+block|}
 name|HiveLockMode
 name|mode
 init|=
@@ -1508,6 +1560,8 @@ argument_list|,
 name|child
 argument_list|,
 name|mode
+argument_list|,
+name|data
 argument_list|)
 decl_stmt|;
 if|if
@@ -1684,6 +1738,9 @@ name|path
 parameter_list|,
 name|HiveLockMode
 name|mode
+parameter_list|,
+name|String
+name|data
 parameter_list|)
 throws|throws
 name|LockException
@@ -1787,6 +1844,8 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|tab
+argument_list|,
+name|data
 argument_list|)
 return|;
 block|}
@@ -1946,6 +2005,8 @@ argument_list|,
 literal|"/"
 argument_list|)
 argument_list|)
+argument_list|,
+name|data
 argument_list|)
 return|;
 block|}
@@ -1954,6 +2015,8 @@ operator|new
 name|HiveLockObject
 argument_list|(
 name|partn
+argument_list|,
+name|data
 argument_list|)
 return|;
 block|}
