@@ -7239,13 +7239,18 @@ name|partSpec
 init|=
 literal|null
 decl_stmt|;
+name|boolean
+name|isExtended
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
 name|ast
 operator|.
 name|getChildCount
 argument_list|()
-operator|==
+operator|>=
 literal|1
 condition|)
 block|{
@@ -7310,6 +7315,35 @@ name|partspec
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|ast
+operator|.
+name|getChildCount
+argument_list|()
+operator|>=
+literal|2
+condition|)
+block|{
+name|isExtended
+operator|=
+operator|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|HiveParser
+operator|.
+name|KW_EXTENDED
+operator|)
+expr_stmt|;
+block|}
 block|}
 name|ShowLocksDesc
 name|showLocksDesc
@@ -7325,6 +7359,8 @@ argument_list|,
 name|tableName
 argument_list|,
 name|partSpec
+argument_list|,
+name|isExtended
 argument_list|)
 decl_stmt|;
 name|rootTasks
@@ -7488,6 +7524,17 @@ argument_list|,
 name|mode
 argument_list|,
 name|partSpec
+argument_list|,
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|ConfVars
+operator|.
+name|HIVEQUERYID
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|rootTasks
