@@ -98,6 +98,10 @@ name|String
 argument_list|>
 name|partSpec
 decl_stmt|;
+specifier|private
+name|String
+name|queryId
+decl_stmt|;
 specifier|public
 name|LockTableDesc
 parameter_list|()
@@ -118,6 +122,9 @@ argument_list|,
 name|String
 argument_list|>
 name|partSpec
+parameter_list|,
+name|String
+name|queryId
 parameter_list|)
 block|{
 name|this
@@ -137,6 +144,12 @@ operator|.
 name|partSpec
 operator|=
 name|partSpec
+expr_stmt|;
+name|this
+operator|.
+name|queryId
+operator|=
+name|queryId
 expr_stmt|;
 block|}
 specifier|public
@@ -219,6 +232,30 @@ operator|.
 name|partSpec
 operator|=
 name|partSpec
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getQueryId
+parameter_list|()
+block|{
+return|return
+name|queryId
+return|;
+block|}
+specifier|public
+name|void
+name|setQueryId
+parameter_list|(
+name|String
+name|queryId
+parameter_list|)
+block|{
+name|this
+operator|.
+name|queryId
+operator|=
+name|queryId
 expr_stmt|;
 block|}
 block|}
